--- a/index.html
+++ b/index.html
@@ -5,9 +5,104 @@
     <link rel="icon" type="image/png" href="/Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MMCM Resource Booking</title>
+
+    <style>
+      /* --- Splash Screen Styling --- */
+      #splash {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: linear-gradient(to bottom, oklch(0.98 0 0), var(--background));
+        color: var(--foreground);
+        font-family: system-ui, sans-serif;
+        z-index: 9999;
+        opacity: 0;
+        animation: splashFadeIn 0.8s ease-out forwards;
+        transition: opacity 0.6s ease;
+      }
+
+      @keyframes splashFadeIn {
+        from {
+          opacity: 0;
+          transform: scale(0.98);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1);
+        }
+      }
+
+      /* Fade-out triggered by JS */
+      #splash.fade-out {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      #splash img {
+        width: 96px;
+        height: 96px;
+        margin-bottom: 1rem;
+        animation: logoFloat 2s ease-in-out infinite alternate;
+      }
+
+      @keyframes logoFloat {
+        from {
+          transform: translateY(0);
+        }
+        to {
+          transform: translateY(-8px);
+        }
+      }
+
+      #splash p {
+        font-size: 0.95rem;
+        margin-bottom: 1rem;
+        opacity: 0.85;
+      }
+
+      #splash .loader {
+        border: 4px solid #e5e7eb;
+        border-top-color: #2563eb;
+        border-radius: 50%;
+        width: 36px;
+        height: 36px;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      /* --- App Fade-in --- */
+      #root {
+        opacity: 0;
+        transition: opacity 0.8s ease;
+        display: none;
+      }
+
+      #root.visible {
+        display: block;
+        opacity: 1;
+      }
+    </style>
   </head>
+
   <body>
+    <!-- Splash screen shown before React mounts -->
+    <div id="splash">
+      <img src="/Favicon.png" alt="MMCM Logo" />
+      <p>Loading MMCM Resource Booking...</p>
+      <div class="loader"></div>
+    </div>
+
+    <!-- React root (kept hidden until splash is gone) -->
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
